Fix: .png brand picture and line break in the sound recorder module

--- a/Resources/public/css/perso.css
+++ b/Resources/public/css/perso.css
@@ -5,7 +5,7 @@ body
 
 .navbar-brand
 {
-  background-image: url('../img/TOEICtrainer3.svg');
+  background-image: url('../img/TOEICtrainer.png');
   background-repeat: no-repeat;
   width: 160px;
   height: 50px;
